--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,15 @@
       </plugin>
 
       <plugin>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>exec-maven-plugin</artifactId>
+      <version>3.2.0</version>
+      <configuration>
+        <mainClass>xyz.medat.gui.MedatoninDB</mainClass>
+      </configuration>
+    </plugin>
+
+      <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.13.0</version>
