--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,25 @@
 {
-  "java.configuration.updateBuildConfiguration": "automatic",
-
-  // Run-on-Save: add → commit → push
-  "runOnSave.commands": [
-    {
-      "match": ".*",
-      "cmd": "git add .; git commit -m \"auto\"; git push"
+    "redhat.telemetry.enabled": true,
+    "java.completion.favoriteStaticMembers": [
+        "org.junit.Assert.*",
+        "org.junit.Assume.*",
+        "org.junit.jupiter.api.Assertions.*",
+        "org.junit.jupiter.api.Assumptions.*",
+        "org.junit.jupiter.api.DynamicContainer.*",
+        "org.junit.jupiter.api.DynamicTest.*",
+        "org.mockito.Mockito.*",
+        "org.mockito.ArgumentMatchers.*",
+        "org.mockito.Answers.*"
+    ],
+    "java.configuration.updateBuildConfiguration": "automatic",
+    "emeraldwalk.runonsave": {
+        "commands": [
+            {
+                "match": ".*",
+                "cmd": "git add .; git commit -m \"auto\"; git push"
+            }
+        ],
+        "chatgpt.lang": "en",
+        "amazonQ.workspaceIndex": true
     }
-  ]
 }
