--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,23 @@
 </properties>
 
   <dependencies>
-    <!-- JUnit for Testing -->
+    <!-- JUnit 5 for Testing -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.10.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.jqwik</groupId>
+      <artifactId>jqwik</artifactId>
+      <version>1.8.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.1.214</version>
       <scope>test</scope>
     </dependency>
 
@@ -126,7 +138,7 @@
             </configuration>
         </plugin>
         
-        <plugin>
+    <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-dependency-plugin</artifactId>
       <executions>
@@ -138,6 +150,14 @@
           </goals>
         </execution>
       </executions>
+    </plugin>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>3.0.0-M9</version>
+      <configuration>
+        <useModulePath>false</useModulePath>
+      </configuration>
     </plugin>
     </plugins>
   </build>
