--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
       <artifactId>jts-core</artifactId>
       <version>1.20.0</version>
     </dependency>
+
+    <!-- Jackson for JSON parsing -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.17.0</version>
+    </dependency>
   </dependencies>
 
 
