--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,18 @@
       <version>8.3.9</version>
     </dependency>
 
+    <!-- JAXB API and runtime for Java 9+ -->
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+
   </dependencies>
 
 
