--- a/pom.xml
+++ b/pom.xml
@@ -34,20 +34,20 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Apache POI Core -->
+
+    <!-- Apache POI Core (update to 5.2.5 to avoid vulnerabilities) -->
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
-      <version>5.3.0</version>
+      <version>5.2.5</version>
     </dependency>
 
     <!-- Apache POI for XWPF (Word processing) -->
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
-      <version>5.3.0</version>
+      <version>5.2.5</version>
     </dependency>
-
     <!-- Apache Commons Collections (required by POI) -->
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -98,7 +98,19 @@
       <version>8.3.9</version>
     </dependency>
 
-    <!-- JAXB API and runtime for Java 9+ -->
+    <!-- Modern JAXB for Java 21 -->
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>4.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>4.0.3</version>
+    </dependency>
+    
+    <!-- Legacy javax.xml.bind for compatibility with docx4j -->
     <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
@@ -106,8 +118,25 @@
     </dependency>
     <dependency>
       <groupId>org.glassfish.jaxb</groupId>
-      <artifactId>jaxb-runtime</artifactId>
-      <version>2.3.1</version>
+      <artifactId>jaxb-core</artifactId>
+      <version>3.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>2.3.8</version>
+    </dependency>
+    
+    <!-- Activation APIs -->
+    <dependency>
+      <groupId>jakarta.activation</groupId>
+      <artifactId>jakarta.activation-api</artifactId>
+      <version>2.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.activation</groupId>
+      <artifactId>javax.activation</artifactId>
+      <version>1.2.0</version>
     </dependency>
 
   </dependencies>
