--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,12 @@
       <artifactId>javax.activation</artifactId>
       <version>1.2.0</version>
     </dependency>
+    <!-- Stanford CoreNLP for NLP operations in TextverstaendnisGenerator -->
+    <dependency>
+      <groupId>edu.stanford.nlp</groupId>
+      <artifactId>stanford-corenlp</artifactId>
+      <version>4.5.5</version>
+    </dependency>
 
   </dependencies>
 
